src/styles/globals.css
@import url("https://fonts.googleapis.com/css2?family=Roboto&family=Space+Mono&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

:root {
  @apply bg-black/95 text-white;

  --st-shadow: 0px 0px 4px 0px rgba(11, 155, 54, 0.2);
  --st-box-shadow: var(--st-shadow), var(--st-shadow), var(--st-shadow);
}

html,
body {
  font-family: "Roboto", sans-serif;
  font-size: 16px;
  line-height: 1.5;
}

a {
  color: inherit;
  text-decoration: none;
}

button {
  @apply bg-transparent outline-none rounded px-2 py-1.5;
}

input,
select,
textarea {
  @apply bg-transparent border border-gray-400 outline-none rounded p-2;
}

button:hover,
input:hover,
select:hover,
textarea:hover {
  @apply border border-primary;
}

button:focus,
input:focus,
select:focus,
textarea:focus {
  @apply border border-primary;
  box-shadow: var(--st-box-shadow);
}

.mono {
  font-family: "Space Mono", monospace;
}

/* @media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
} */

